hard-gists/6719172/run.log
=== Docker Run Log for 6719172 ===
Started at: Mi 29. Okt 16:42:22 CET 2025

[2025-10-29 16:42:22] START: Running container for 6719172
[2025-10-29 16:42:23] SUCCESS: Container aabd05d29d190b0de082a564c68d3bf59d858c370f97e50b78a8042f37175b7d started for 6719172
=== Container logs for 6719172 ===
  File "/snippet.py", line 230
    print type(value)
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6719172 ===
[2025-10-29 16:42:25] INFO: Container aabd05d29d190b0de082a564c68d3bf59d858c370f97e50b78a8042f37175b7d has stopped
